@@ -15,7 +15,9 @@ Encode = 3.01
 Encode::Locale = 1
 Exporter = 5.57
 HTTP::Date = 6
+IO::Compress::Brotli = 0.004001
 IO::Compress::Bzip2 = 2.021
+IO::Uncompress::Brotli = 0.004001
 IO::Uncompress::Bunzip2 = 2.021
 LWP::MediaTypes = 6
 MIME::Base64 = 2.1
@@ -38,6 +40,12 @@ StaticInstall.dry_run = 0
 to_relationship = suggests
 copy_to = develop.requires
 module = Clone
+
+[Prereqs::Soften / Brotli]
+to_relationship = recommends
+copy_to = test.recommends
+module = IO::Compress::Brotli
+module = IO::Uncompress::Brotli
 
 [Test::Compile]
 bail_out_on_fail = 1
